smart_home/build/log/idf_py_stdout_output_31132
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\esp\smart_home\build\bootloader\esp-idf\esptool_py && C:\Espressif\tools\python\v5.3.5\venv\Scripts\python.exe C:/esp/v5.3.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/esp/smart_home/build/bootloader/bootloader.bin"
Bootloader binary size 0x5430 bytes. 0x2bd0 bytes (34%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/smart_home.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/smart_home.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20250707\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/esp/smart_home/build/config -IC:/esp/smart_home/main -IC:/esp/v5.3.5/esp-idf/components/newlib/platform_include -IC:/esp/v5.3.5/esp-idf/components/freertos/config/include -IC:/esp/v5.3.5/esp-idf/components/freertos/config/include/freertos -IC:/esp/v5.3.5/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v5.3.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v5.3.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v5.3.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v5.3.5/esp-idf/components/freertos/esp_additions/include -IC:/esp/v5.3.5/esp-idf/components/esp_hw_support/include -IC:/esp/v5.3.5/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v5.3.5/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/v5.3.5/esp-idf/components/esp_hw_support/dma/include -IC:/esp/v5.3.5/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v5.3.5/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/v5.3.5/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/esp/v5.3.5/esp-idf/components/heap/include -IC:/esp/v5.3.5/esp-idf/components/log/include -IC:/esp/v5.3.5/esp-idf/components/soc/include -IC:/esp/v5.3.5/esp-idf/components/soc/esp32s3 -IC:/esp/v5.3.5/esp-idf/components/soc/esp32s3/include -IC:/esp/v5.3.5/esp-idf/components/hal/platform_port/include -IC:/esp/v5.3.5/esp-idf/components/hal/esp32s3/include -IC:/esp/v5.3.5/esp-idf/components/hal/include -IC:/esp/v5.3.5/esp-idf/components/esp_rom/include -IC:/esp/v5.3.5/esp-idf/components/esp_rom/include/esp32s3 -IC:/esp/v5.3.5/esp-idf/components/esp_rom/esp32s3 -IC:/esp/v5.3.5/esp-idf/components/esp_common/include -IC:/esp/v5.3.5/esp-idf/components/esp_system/include -IC:/esp/v5.3.5/esp-idf/components/esp_system/port/soc -IC:/esp/v5.3.5/esp-idf/components/esp_system/port/include/private -IC:/esp/v5.3.5/esp-idf/components/xtensa/esp32s3/include -IC:/esp/v5.3.5/esp-idf/components/xtensa/include -IC:/esp/v5.3.5/esp-idf/components/xtensa/deprecated_include -IC:/esp/v5.3.5/esp-idf/components/lwip/include -IC:/esp/v5.3.5/esp-idf/components/lwip/include/apps -IC:/esp/v5.3.5/esp-idf/components/lwip/include/apps/sntp -IC:/esp/v5.3.5/esp-idf/components/lwip/lwip/src/include -IC:/esp/v5.3.5/esp-idf/components/lwip/port/include -IC:/esp/v5.3.5/esp-idf/components/lwip/port/freertos/include -IC:/esp/v5.3.5/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v5.3.5/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v5.3.5/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v5.3.5/esp-idf/components/esp_wifi/include -IC:/esp/v5.3.5/esp-idf/components/esp_wifi/include/local -IC:/esp/v5.3.5/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/v5.3.5/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/v5.3.5/esp-idf/components/esp_event/include -IC:/esp/v5.3.5/esp-idf/components/esp_phy/include -IC:/esp/v5.3.5/esp-idf/components/esp_phy/esp32s3/include -IC:/esp/v5.3.5/esp-idf/components/esp_netif/include -IC:/esp/v5.3.5/esp-idf/components/nvs_flash/include -IC:/esp/v5.3.5/esp-idf/components/spi_flash/include -IC:/esp/v5.3.5/esp-idf/components/esp_partition/include -IC:/esp/v5.3.5/esp-idf/components/esp_http_server/include -IC:/esp/v5.3.5/esp-idf/components/http_parser -IC:/esp/v5.3.5/esp-idf/components/esp_driver_gpio/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/esp/smart_home=. -fmacro-prefix-map=C:/esp/v5.3.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/smart_home.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\smart_home.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/smart_home.c.obj -c C:/esp/smart_home/main/smart_home.c
C:/esp/smart_home/main/smart_home.c: In function 'root_handler':
C:/esp/smart_home/main/smart_home.c:39:28: error: expected ')' before 'refresh'
   39 |         "<meta http-equiv="refresh" content="1">"
      |                            ^~~~~~~
      |                            )
C:/esp/smart_home/main/smart_home.c:33:12: note: to match this '('
   33 |     sprintf(html,
      |            ^
ninja: build stopped: subcommand failed.
